resolved whitespace at bottom of page on mobile display

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,9 @@
 body {
   background: linear-gradient(45deg, #2f1c53, #a46dff, #f6d1fd);
+  overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: #a46dff #f3f178d7;
-  height: 100vh;
+  height: 100%;
 }
 .display {
   margin-left: auto !important;
@@ -55,5 +56,4 @@ body {
 }
 .info-screen {
   background: transparent;
-  /* margin-top: 5px; */
 }
