--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -1,5 +1,5 @@
 .display-screen {
-  background-color: rgba(242, 245, 197, 0.5);
+  background-color: rgba(242, 245, 197, 0.5) !important;
   border: none;
   overflow-y: scroll;
 }
